# ChangeLog for www-client/arora
# Copyright 1999-2009 Gentoo Foundation; distributed under the GPL version 2
# Copyright 2006-2008 Berkano Overlay; distributed under the GPL version 2

  22 Jul 2009; Ben de Groot <yngwin@gentoo.org> -arora-0.8.0.ebuild:
  0.8.0 release ebuild moved to portage

  22 Jul 2009; Ben de Groot <yngwin@gentoo.org> arora-0.8.0.ebuild:
  Remove doc useflag - doesnt do anything

*arora-0.8.0 (21 Jul 2009)

  21 Jul 2009; Ben de Groot <yngwin@gentoo.org> +arora-0.8.0.ebuild:
  Add newest release for testing. USE=doc and translations are untested yet.

  01 Jul 2009; Davide Pesavento <davidepesa@gmail.com> arora-9999.ebuild:
  No need to specify .pro file name.

  30 May 2009; Markos Chandras <hwoarang@gentoo.org> arora-9999.ebuild:
  Use default src_compile. Upstream fixed parallel compilation :)

  30 May 2009; Markos Chandras <hwoarang@gentoo.org> arora-9999.ebuild:
  Add link to upstream bug about compilation

  29 May 2009; Markos Chandras <hwoarang@gentoo.org> arora-9999.ebuild:
  Ebuild clean up, use -j1 as compilation workaround

  08 Apr 2009; Ben de Groot <yngwin@gentoo.org> -arora-0.6.ebuild,
  arora-9999.ebuild:
  Remove 0.6 which is in portage. Add changes proposed by Davide Pesavento
  in bug 264995.

*arora-0.6 (30 Mar 2009)

  30 Mar 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  +arora-0.6.ebuild:
  version bump [using tree ebuild]. removed en_US locale (file missing from
  upstream).

  21 Feb 2009; Markos Chandras <hwoarang@gentoo.org> arora-9999-r2.ebuild:
  Dropping keywords

  02 Feb 2009; Markos Chandras (hwoarang) <hwoarang@silverarrow.gr>
  www-client/arora/arora-9999-r2.ebuild:
  Code cleanup , inherit the new qt4-edge eclass

  11 Nov 2008; Ben de Groot <yngwin@gentoo.org>; -arora-9999.ebuild,
  -arora-9999-r1.ebuild, +arora-9999-r2.ebuild:
  Reverting to not process linguas, as live svn code breaks too often.

  03 Oct 2008; Ben de Groot <yngwin@gentoo.org>; +arora-9999-r1.ebuild: