@@ -1,3 +1,5 @@
+DIST arora-0.9.0.tar.gz 971987 RMD160 07370add676c7f42d359a8da0595ae261b512962 SHA1 7638571b52923987c62d51f401802ae6f6048592 SHA256 d09a1cdbb4ed2b6a81532fda206e229997deda8e68f017c0d29deb6ef4f11ec2
+EBUILD arora-0.9.0.ebuild 1876 RMD160 3e0ffe1a794e8c874e6cb23836eb886ba04b010e SHA1 fbed334354482ca85d9f4bb321486ddeb9338e45 SHA256 429beb8f8638b72affaf87d1ac26340f27968f46d4060b8b251b39037dd48e2c
 EBUILD arora-9999.ebuild 484 RMD160 83a9b0cdf335a54325d049dc68b64544d2d93e57 SHA1 deb2a6991f4a3ba0be7c4a732c0b8c32e3e28b68 SHA256 ba8b25356446d737dcd0b9953cca2e61bb36bc17693333d0d73b6ddac27baf4c
-MISC ChangeLog 2403 RMD160 1c01bbf9c2dde1d8c6f1f0bbd6c2a57f03154d12 SHA1 735fa7eb5145c09ffa3648d8d84fcf1b65ea6f73 SHA256 246309abba7f3c85b5686b477fba29b81ba1330e960060a4054ea9cb7414ae80
+MISC ChangeLog 2536 RMD160 4edeec52dbee53a3cc78a14601ac887147cda090 SHA1 1cfbb129f5db2d0ad33dc9f72b471a92de287fdd SHA256 65574ddfc0799498b67a5258064a224b3fd2b96963b93d79eae9858f8a958ec3
 MISC metadata.xml 157 RMD160 ac97f8cc970b649f4d061f6e4441eaf6144524e3 SHA1 415c2e405c673551de51cf6623305f9dbcc70b23 SHA256 94b6a379608ee8b74b175f0dfe5b2312658faf5eca74bba0787fc02c3d6859d6
